# mesh-viewer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  object-viewer  readme.md
res/shaders/: fragment.glsl  vertex.glsl
src/: globals.h  main.cpp  mesh.cpp  mesh.h  openmesh.h  readme.md  shaders.cpp  shaders.h  transform.cpp  transform.h
src/dependancies/imgui/: imgui_impl_glfw.cpp
